250809 17:26 돌봄회원 진행중

--- a/webapp/app/myPageCare/careMatching.html
+++ b/webapp/app/myPageCare/careMatching.html
@@ -1,62 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>매칭기록</title>
+  <link rel="stylesheet" href="./../../assets/css/header.css">
+  <link rel="stylesheet" href="./../../assets/css/footer.css">
+  <script defer src="./../../assets/js/main/include.js"></script>
   <link rel="stylesheet" href="./../../assets/css/myPageCare/careMatching.css">
 </head>
+
 <body>
+  <div id="header"></div>
   <header>
-  
+
   </header>
   <main>
     <nav class="sidebar">
       <ul>
-        <a href=""><img src="./../../assets/img/myPageCare/peple.jpg" alt=""></a>
-        <a href="">
-          <li>개인정보 수정</li>
-        </a>
-        <a href="">
-          <li>찜한 목록</li>
-        </a>
-        <a href="">
-          <li>매칭 기록</li>
-        </a>
-        <a href="">
-          <li>쪽지함</li>
-        </a>
-        <a href="">
-          <li>게시글 관리</li>
-        </a>
-        <a href="">
-          <li>포인트 환급</li>
-        </a>
-        <a href="">
-          <li>1 대 1 문의</li>
-        </a>
-        <a href="">
-          <li>회원 탈퇴</li>
-        </a>
+        <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a></li>
+        <li><a href="./careModify.html">개인정보 수정</a></li>
+        <li><a href="./careMark.html">찜한 목록</a></li>
+        <li><a href="./careMatching.html">매칭 기록</a></li>
+        <li><a href="./careMessage.html">쪽지함</a></li>
+        <li><a href="./carePost.html">게시글 관리</a></li>
+        <li><a href="./carePointreturn.html">포인트 환급</a></li>
+        <li><a href="./careReference.html">1 대 1 문의</a></li>
+        <li><a href="./careExit.html">회원 탈퇴</a></li>
       </ul>
     </nav>
-  
+
     <div class="div_mark">
       <div class="title"> 매칭 기록 </div>
       <div class="matching_month">
         <ul class="months">
-          <li>1월</li>
-          <li>2월</li>
-          <li>3월</li>
-          <li>4월</li>
-          <li>5월</li>
-          <li>6월</li>
-          <li>7월</li>
-          <li>8월</li>
-          <li>9월</li>
-          <li>10월</li>
-          <li>11월</li>
-          <li>12월</li>
+          <li><a href="">1월</a></li>
+          <li><a href="">2월</a></li>
+          <li><a href="">3월</a></li>
+          <li><a href="">4월</a></li>
+          <li><a href="">5월</a></li>
+          <li><a href="">6월</a></li>
+          <li><a href="">7월</a></li>
+          <li><a href="">8월</a></li>
+          <li><a href="">9월</a></li>
+          <li><a href="">10월</a></li>
+          <li><a href="">11월</a></li>
+          <li><a href="">12월</a></li>
         </ul>
         <ul class="matching_list">
           <li class="matching">
@@ -77,14 +67,14 @@
       </div>
       <nav class="page">
         <ul>
-          <li>&lt;</li>
-          <li>1</li>
-          <li>2</li>
-          <li>3</li>
-          <li>4</li>
-          <li>&gt;</li>
+          <li><a href="">&lt;</a></li>
+          <li><a href="">1</a></li>
+          <li><a href="">2</a></li>
+          <li><a href="">3</a></li>
+          <li><a href="">4</a></li>
+          <li><a href="">&gt;</a></li>
         </ul>
-  
+
       </nav>
       <div class="div_add">
         <button>추가</button>
@@ -92,7 +82,7 @@
     </div>
   </main>
   <footer>
-  
+
   </footer>
 
   <div class="modal" id="matching_add">
@@ -116,5 +106,8 @@
       <button id="success_button">확인</button>
     </div>
   </div>
+  <div id="footer"></div>
+
 </body>
+
 </html>
