--- a/webapp/app/myPageCare/careProfile.html
+++ b/webapp/app/myPageCare/careProfile.html
@@ -17,31 +17,15 @@
   <main>
     <nav class="sidebar">
       <ul>
-        <a href=""><img src="./../../assets/img/myPageCare/peple.jpg" alt=""></a>
-        <a href="">
-          <li>개인정보 수정</li>
-        </a>
-        <a href="">
-          <li>찜한 목록</li>
-        </a>
-        <a href="">
-          <li>매칭 기록</li>
-        </a>
-        <a href="">
-          <li>쪽지함</li>
-        </a>
-        <a href="">
-          <li>게시글 관리</li>
-        </a>
-        <a href="">
-          <li>포인트 환급</li>
-        </a>
-        <a href="">
-          <li>1 대 1 문의</li>
-        </a>
-        <a href="">
-          <li>회원 탈퇴</li>
-        </a>
+        <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a></li>
+        <li><a href="./careModify.html">개인정보 수정</a></li>
+        <li><a href="./careMark.html">찜한 목록</a></li>
+        <li><a href="./careMatching.html">매칭 기록</a></li>
+        <li><a href="./careMessage.html">쪽지함</a></li>
+        <li><a href="./carePost.html">게시글 관리</a></li>
+        <li><a href="./carePointreturn.html">포인트 환급</a></li>
+        <li><a href="./careReference.html">1 대 1 문의</a></li>
+        <li><a href="./careExit.html">회원 탈퇴</a></li>
       </ul>
     </nav>
 
@@ -132,13 +116,13 @@
     </div>
   </main>
 
-<div id="uploadSuccessModal" class="modal">
+<!--<div id="uploadSuccessModal" class="modal">
   <div class="modal-content">
     <p>파일이 업로드 되었습니다.</p>
     <button id="uploadConfirmBtn" onclick="closeuploadSuccessModal()">확인</button>
   </div>
 </div>
-
+-->
 <!-- <div id="saveSuccessModal" class="modal">
   <div class="modal-content">
     <p>정보가 저장되었습니다.</p>
@@ -152,9 +136,8 @@
     <button id="saveConfirmBtn">확인</button>
   </div>
 </div> -->
-<footer>
   <div id="footer"></div>
-</footer>
+
 
 </body>
 
