--- a/webapp/app/myPageCare/careModify.html
+++ b/webapp/app/myPageCare/careModify.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Care_Modify</title>
+  <link rel="stylesheet" href="./../../assets/css/header.css">
+  <link rel="stylesheet" href="./../../assets/css/footer.css">
+  <script defer src="./../../assets/js/main/include.js"></script>
   <link rel="stylesheet" href="./../../assets/css/myPageCare/careModify.css">
 </head>
 </head>
+
 <body>
+  <div id="header"></div>
   <header>
 
   </header>
   <main>
     <nav class="main_sidebar">
-      <div></div>
       <ul>
-
-        <li><a href=""> <button> </button></a>개인정보 수정</li>
-        <li>찜한 목록</li>
-        <li>매칭 기록</li>
-        <li>쪽지함</li>
-        <li>게시글 관리</li>
-        <li>포인트 환급</li>
-        <li>1 대 1 문의</li>
-        <li>회원 탈퇴</li>
+        <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a></li>
+        <li><a href="./careModify.html">개인정보 수정</a></li>
+        <li><a href="./careMark.html">찜한 목록</a></li>
+        <li><a href="./careMatching.html">매칭 기록</a></li>
+        <li><a href="./careMessage.html">쪽지함</a></li>
+        <li><a href="./carePost.html">게시글 관리</a></li>
+        <li><a href="./carePointreturn.html">포인트 환급</a></li>
+        <li><a href="./careReference.html">1 대 1 문의</a></li>
+        <li><a href="./careExit.html">회원 탈퇴</a></li>
       </ul>
     </nav>
 
@@ -47,7 +52,7 @@
         </div>
         <div class="caremodify">
           <div class="name_date">
-            <div >
+            <div>
               <div>성명</div>
               <div>이름</div>
             </div>
@@ -104,8 +109,8 @@
       </form>
     </div>
   </main>
-  <footer>
-    <div id="footer"></div>
-  </footer>
+  <div id="footer"></div>
+
 </body>
+
 </html>
