--- a/webapp/app/myPageCare/carePointreturn.html
+++ b/webapp/app/myPageCare/carePointreturn.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>point return</title>
+  <link rel="stylesheet" href="./../../assets/css/header.css">
+  <link rel="stylesheet" href="./../../assets/css/footer.css">
+  <script defer src="./../../assets/js/main/include.js"></script>
   <link rel="stylesheet" href="./../../assets/css/myPageCare/carePointreturn.css">
 </head>
+
 <body>
-  <header></header>
+  <div id="header"></div>
   <main>
     <nav class="main_sidebar">
-      <div></div>
       <ul>
-        <li>개인정보 수정</li>
-        <li>찜한 목록</li>
-        <li>매칭 기록</li>
-        <li>쪽지함</li>
-        <li>게시글 관리</li>
-        <li>포인트 환급</li>
-        <li>1 대 1 문의</li>
-        <li>회원 탈퇴</li>
+        <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a></li>
+        <li><a href="./careModify.html">개인정보 수정</a></li>
+        <li><a href="./careMark.html">찜한 목록</a></li>
+        <li><a href="./careMatching.html">매칭 기록</a></li>
+        <li><a href="./careMessage.html">쪽지함</a></li>
+        <li><a href="./carePost.html">게시글 관리</a></li>
+        <li><a href="./carePointreturn.html">포인트 환급</a></li>
+        <li><a href="./careReference.html">1 대 1 문의</a></li>
+        <li><a href="./careExit.html">회원 탈퇴</a></li>
       </ul>
     </nav>
 
@@ -60,15 +65,15 @@
       </div>
     </section>
   </main>
-  <footer>
+  <div id="footer"></div>
 
-  </footer>
   <div class="modal" id="refundModal">
-  <div class="modal_box">
-    <p>환급 신청이 완료되었습니다.</p>
-    <div class="modal_buttons">
-      <button id="refundConfirm">확인</button>
+    <div class="modal_box">
+      <p>환급 신청이 완료되었습니다.</p>
+      <div class="modal_buttons">
+        <button id="refundConfirm">확인</button>
+      </div>
     </div>
   </div>
-</div>
+
 </html>
