--- a/webapp/app/myPageCare/carePostDP.html
+++ b/webapp/app/myPageCare/carePostDP.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Care_PostDetailPage</title>
+  <link rel="stylesheet" href="./../../assets/css/header.css">
+  <link rel="stylesheet" href="./../../assets/css/footer.css">
+  <script defer src="./../../assets/js/main/include.js"></script>
   <link rel="stylesheet" href="./../../assets/css/myPageCare/carePostDP.css">
 </head>
-<body>
-  <header>
 
-  </header>
+<body>
+  <div id="header"></div>
   <main>
-    <nav class="main_sidebar">
-      <div></div>
-      <ul>
-        <li>개인정보 수정</li>
-        <li>찜한 목록</li>
-        <li>매칭 기록</li>
-        <li>쪽지함</li>
-        <li>게시글 관리</li>
-        <li>포인트 환급</li>
-        <li>1 대 1 문의</li>
-        <li>회원 탈퇴</li>
-      </ul>
-    </nav>
+
 
     <section class="post_dp">
-      <div class="title"><h2>안녕하세요</h2></div>
+      <div class="title">
+        <h2>안녕하세요</h2>
+      </div>
       <div class="post_info">
         <span>등록자명 : 아무개</span>
         <span>등록일 : 2025-08-04</span><br>
@@ -41,7 +34,9 @@
         <button class="btn_retry">수정</button>
       </div>
 
-      <section class="reply"><h4>댓글 [1]</h4> <hr>
+      <section class="reply">
+        <h4>댓글 [1]</h4>
+        <hr>
         <div class="comment">
           <div class="author">아무개</div>
           <div class="cmt_content">반갑다내이름은박찬호고나는LA다저스에있을때부..</div>
@@ -50,16 +45,17 @@
 
         <div class="comments">
           <form action="" method="get">
-          댓글작성 <br> <hr>
-          <input type="text" placeholder="댓글을 작성하세요">
-          <button>작성</button>
+            댓글작성 <br>
+            <hr>
+            <input type="text" placeholder="댓글을 작성하세요">
+            <button>작성</button>
           </form>
         </div>
       </section>
     </section>
   </main>
   <footer>
-    
+
   </footer>
   <div class="modal" id="deleteModal">
     <div class="modal_box">
@@ -70,5 +66,8 @@
       </div>
     </div>
   </div>
+  <div id="footer"></div>
+
 </body>
+
 </html>
