--- a/webapp/app/myPageCare/carePostRe.html
+++ b/webapp/app/myPageCare/carePostRe.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>게시글 수정 후 페이지</title>
+  <link rel="stylesheet" href="./../../assets/css/header.css">
+  <link rel="stylesheet" href="./../../assets/css/footer.css">
+  <script defer src="./../../assets/js/main/include.js"></script>
   <link rel="stylesheet" href="./../../assets/css/myPageCare/carePostRe.css">
 </head>
+
 <body>
-  <header></header>
+  <div id="header"></div>
   <main>
-    <nav class="main_sidebar">
-      <div></div>
-      <ul>
-        <li>개인정보 수정</li>
-        <li>찜한 목록</li>
-        <li>매칭 기록</li>
-        <li>쪽지함</li>
-        <li>게시글 관리</li>
-        <li>포인트 환급</li>
-        <li>1 대 1 문의</li>
-        <li>회원 탈퇴</li>
-      </ul>
-    </nav>
+
 
     <section class="post_edit">
-      <div class="re_title"><h2>안녕하세요</h2></div>
+      <div class="re_title">
+        <h2>안녕하세요</h2>
+      </div>
       <div class="re_post_info">
         <span>등록자명 : 아무개</span>
         <span>등록일 : 2025-08-04</span><br>
@@ -44,16 +39,8 @@
       </div>
     </section>
   </main>
-  <footer>
+  <div id="footer"></div>
 
-  </footer>
-  <div class="modal" id="editModal";>
-    <div class="modal_box">
-      <p>수정이 완료되었습니다.</p>
-      <div class="modal_buttons">
-        <button id="check">확인</button>
-      </div>
-    </div>
-  </div>
 </body>
+
 </html>
