--- a/webapp/app/restaurant/restaurant.html
+++ b/webapp/app/restaurant/restaurant.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>함께 걸음</title>
+  <title>함께 걸음 - 음식점 리스트</title>
   <link rel="stylesheet" href="./../../assets/css/restaurant/restaurant.css">
   <link rel="stylesheet" href="./../../assets/css/header.css">
   <link rel="stylesheet" href="./../../assets/css/footer.css">
