250809 20:04 강버들 모달창 틀 완성

--- a/webapp/app/restaurant/restaurantDetail.html
+++ b/webapp/app/restaurant/restaurantDetail.html
@@ -23,18 +23,23 @@
             <img class="restaurant_img" src="./../../assets/img/restaurant/re1.jpg">
           </div>
           <div class="restaurant_info">
-            <p>
-              · 한식
-            </p>
-            <p>
-              · 전화번호
-            </p>
-            <p>
-              · 장애인 화장실 여부 : O
-            </p>
-            <p>
-              · 경사로 유무 : O
-            </p>
+            <div class="short_info">
+              <h1>
+                자담치킨
+              </h1>
+              <p>
+                · 한식
+              </p>
+              <p>
+                · 전화번호
+              </p>
+              <p>
+                · 장애인 화장실 여부 : O
+              </p>
+              <p>
+                · 경사로 유무 : O
+              </p>
+            </div>
             <div class="restaurant_introduction">
               <p class="introduction">
                 서초 방배 1동 자담치킨입니다.
