250809 20:12 장성주 지하철 완성

--- a/webapp/app/myPageCare/careExit.html
+++ b/webapp/app/myPageCare/careExit.html
@@ -63,7 +63,7 @@
     </section>
   </main>
 
-  
+<!--   
   <div class="modal" id="modalConfirm">
     <div class="modal-content">
       <p>정말로 회원 탈퇴를 진행하시겠습니까?<br><span class="red">※ 탈퇴는 되돌릴 수 없습니다.</span></p>
@@ -91,7 +91,7 @@
         <button class="btn blue" onclick="closeModal('modalSuccess')">확인</button>
       </div>
     </div>
-  </div>
+  </div> -->
   <div id="footer"></div>
 </body>
 
