--- a/webapp/app/myPageCare/careProfile.html
+++ b/webapp/app/myPageCare/careProfile.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./../../assets/css/myPageCare/careProfile.css">
   <script defer src="./../../assets/js/myPageCare/careProfile.js"></script>
 </head>
+
 <body>
   <div id="header"></div>
 
@@ -41,7 +42,7 @@
 
         <form action="" method="get">
           <div class="caremodify">
-            
+
             <div class="name_date">
               <div>요일</div>
               <div class="possible_date">
@@ -116,26 +117,26 @@
     </div>
   </main>
 
-<!--<div id="uploadSuccessModal" class="modal">
-  <div class="modal-content">
-    <p>파일이 업로드 되었습니다.</p>
-    <button id="uploadConfirmBtn" onclick="closeuploadSuccessModal()">확인</button>
+  <!-- <div id="uploadSuccessModal" class="modal">
+    <div class="modal-content">
+      <p>파일이 업로드 되었습니다.</p>
+      <button id="uploadConfirmBtn" onclick="closeuploadSuccessModal()">확인</button>
+    </div>
   </div>
-</div>
--->
-<!-- <div id="saveSuccessModal" class="modal">
-  <div class="modal-content">
-    <p>정보가 저장되었습니다.</p>
-    <button id="saveConfirmBtn">확인</button>
-  </div>
-</div> -->
 
-<!-- <div id="proposeSuccessModal" class="modal">
-  <div class="modal-content">
-    <p>이력 수정 신청이 완료되었습니다.</p>
-    <button id="saveConfirmBtn">확인</button>
-  </div>
-</div> -->
+  <div id="saveSuccessModal" class="modal">
+    <div class="modal-content">
+      <p>정보가 저장되었습니다.</p>
+      <button id="saveConfirmBtn">확인</button>
+    </div>
+  </div> -->
+<!-- 
+  <div id="proposeSuccessModal" class="modal">
+    <div class="modal-content">
+      <p>이력 수정 신청이 완료되었습니다.</p>
+      <button id="saveConfirmBtn">확인</button>
+    </div>
+  </div> -->
   <div id="footer"></div>
 
 
