--- a/webapp/app/subwayLine/chunggyae.html
+++ b/webapp/app/subwayLine/chunggyae.html
@@ -18,16 +18,15 @@
 
     <div class="station_info">
       <div class="station_img">
-        <img src="./../../assets/img/subwayLine/gangnam.png" alt="">
+        <img src="./../../assets/img/subwayLine/chunggyae.png" alt="">
       </div>
 
       <div class="station_exit">
         <!-- 역 정보 -->
-        <div> 강남역 </div>
+        <div> 청계산입구역 </div>
       </div>
 
       <div class="line_number">
-        <img src="./../../assets/img/subwayLine/Line_2.png" alt="" >
         <img src="./../../assets/img/subwayLine/dx_Line.png" alt="">
       </div>
     </div>
