--- a/webapp/app/subwayLine/subway.html
+++ b/webapp/app/subwayLine/subway.html
@@ -54,95 +54,96 @@
       <div class="station_list" id="allline_station">
         <h3>전체 역 목록</h3>
         <ul>
-          <li class="station_name">동작</li>
-          <li class="station_name">구반포</li>
-          <li class="station-name">신반포</li>
-          <li class="station_name">고속터미널</li>
-          <li class="station_name">사평</li>
-          <li class="station_name">신논현</li>
-          <li class="station_name">총신대입구</li>
-          <li class="station_name">내방</li>
-          <li class="station_name">반포</li>
-          <li class="station_name">논현</li>
-          <li class="station_name">사당</li>
-          <li class="station_name">방배</li>
-          <li class="station_name">서초</li>
-          <li class="station_name">교대</li>
-          <li class="station_name">강남</li>
-          <li class="station_name">신사</li>
-          <li class="station_name">양재</li>
-          <li class="station_name">양재시민의숲</li>
-          <li class="station_name">청계산입구</li>
-          <li class="station_name">잠원</li>
-          <li class="station_name">남부터미널</li>
+          
+          <li class="station_name"><a href="./../../app/subwayLine/dongjack.html">동작</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/gubanpo.html">구반포</a></li>
+          <li class="station-name"><a href="./../../app/subwayLine/shinbanpo.html">신반포</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/gosukterminner.html">고속터미널</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/sapeung.html">사평</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/sinnonehyun.html">신논현</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/chungshindae.html">총신대입구</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/nebang.html">내방</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/banpo.html">반포</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/nonehyune.html">논현</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/sadang.html">사당</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/bangbae.html">방배</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/seacho.html">서초</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/gyudae.html">교대</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/gangnam.html">강남</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/shinsa.html">신사</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/yangjae.html">양재</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/yangjeaforest.html">양재시민의숲</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/chunggyae.html">청계산입구</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/jameone.html">잠원</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/nambuterminer.html">남부터미널</a></li>
         </ul>
       </div>
 
       <div class="station_list" id="line2_stations">
         <h3>2호선 역 목록</h3>
         <ul>
-          <li class="station_name">사당</li>
-          <li class="station_name">방배</li>
-          <li class="station_name">서초</li>
-          <li class="station_name">교대</li>
-          <li class="station_name">강남</li>
+          <li class="station_name"><a href="./../../app/subwayLine/sadang.html">사당</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/bangbae.html">방배</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/seacho.html">서초</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/gyudae.html">교대</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/gangnam.html">강남</a></li>
         </ul>
       </div>
 
       <div class="station_list" id="line3_stations">
         <h3>3호선 역 목록</h3>
         <ul>
-          <li class="station_name">신사</li>
-          <li class="station_name">잠원</li>
-          <li class="station_name">고속터미널</li>
-          <li class="station_name">교대</li>
-          <li class="station_name">남부터미널</li>
-          <li class="station_name">양재</li>
+          <li class="station_name"><a href="./../../app/subwayLine/shinsa.html">신사</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/jameone.html">잠원</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/gosukterminner.html">고속터미널</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/gyudae.html">교대</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/nambuterminer.html">남부터미널</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/dongjack.html">양재</a></li>
         </ul>
       </div>
 
       <div class="station_list" id="line4_stations">
         <h3>4호선 역 목록</h3>
         <ul>
-          <li class="station_name">동작</li>
-          <li class="station_name">총신대입구</li>
-          <li class="station_name">사당</li>
+          <li class="station_name"><a href="./../../app/subwayLine/dongjack.html">동작</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/chungshindae.html">총신대입구</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/sadang.html">사당</a></li>
         </ul>
       </div>
 
       <div class="station_list" id="line7_stations">
         <h3>7호선 역 목록</h3>
         <ul>
-          <li class="station_name">총신대입구</li>
-          <li class="station_name">내방</li>
-          <li class="station_name">고속터미널</li>
-          <li class="station_name">반포</li>
-          <li class="station_name">논현</li>
+          <li class="station_name"><a href="./../../app/subwayLine/chungshindae.html">총신대입구</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/nebang.html">내방</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/gosukterminner.html">고속터미널</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/banpo.html">반포</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/nonehyune.html">논현</a></li>
         </ul>
       </div>
 
       <div class="station_list" id="line9_stations">
         <h3>9호선 역 목록</h3>
         <ul>
-          <li class="station_name">동작</li>
-          <li class="station_name">구반포</li>
-          <li class="station_name">신반포</li>
-          <li class="station_name">고속터미널</li>
-          <li class="station_name">사평</li>
-          <li class="station_name">신논현</li>
+          <li class="station_name"><a href="./../../app/subwayLine/dongjack.html">동작</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/gubanpo.html">구반포</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/shinbanpo.html">신반포</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/gosukterminner.html">고속터미널</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/sapeung.html">사평</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/dongjack.html">신논현</a></li>
         </ul>
       </div>
 
       <div class="station_list" id="dxline_stations">
         <h3>신분당선 역 목록</h3>
         <ul>
-          <li class="station_name">신사</li>
-          <li class="station_name">논현</li>
-          <li class="station_name">신논현</li>
-          <li class="station_name">강남</li>
-          <li class="station_name">양재</li>
-          <li class="station_name">양재시민의숲</li>
-          <li class="station_item">청계산입구</li>
+          <li class="station_name"><a href="./../../app/subwayLine/shinsa.html">신사</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/nonehyune.html">논현</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/sinnonehyun.html">신논현</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/gangnam.html">강남</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/yangjae.html">양재</a></li>
+          <li class="station_name"><a href="./../../app/subwayLine/yangjeaforest.html">양재시민의숲</a></li>
+          <li class="station_item"><a href="./../../app/subwayLine/chunggyae.html">청계산입구</a></li>
         </ul>
       </div>
     </div>
