--- a/webapp/app/subwayLine/yangjeaforest.html
+++ b/webapp/app/subwayLine/yangjeaforest.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./../../assets/css/header.css">
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
-  <link rel="stylesheet" href="./../../assets/css/subwayLine/gangnam.css">
+  <link rel="stylesheet" href="./../../assets/css/subwayLine/yangjeaforest.css">
 </head>
 
 <body>
@@ -18,16 +18,15 @@
 
     <div class="station_info">
       <div class="station_img">
-        <img src="./../../assets/img/subwayLine/gangnam.png" alt="">
+        <img src="./../../assets/img/subwayLine/yangjeaforest.png" alt="">
       </div>
 
       <div class="station_exit">
         <!-- 역 정보 -->
-        <div> 강남역 </div>
+        <div> 양재시민의숲 </div>
       </div>
 
       <div class="line_number">
-        <img src="./../../assets/img/subwayLine/Line_2.png" alt="" >
         <img src="./../../assets/img/subwayLine/dx_Line.png" alt="">
       </div>
     </div>
