250809 20:19 장성주 돌봄 수정중

--- a/webapp/app/myPageCare/carePostDP.html
+++ b/webapp/app/myPageCare/carePostDP.html
@@ -29,7 +29,7 @@
         안녕하세요
       </div>
       <div class="buttons">
-        <button class="btn_list">목록</button>
+        <button class="btn_list"> <a href="./carePost.html"></a>목록</button>
         <button class="btn_delete">삭제</button>
         <button class="btn_retry">수정</button>
       </div>
@@ -54,10 +54,8 @@
       </section>
     </section>
   </main>
-  <footer>
 
-  </footer>
-  <div class="modal" id="deleteModal">
+  <!-- <div class="modal" id="deleteModal">
     <div class="modal_box">
       <p>정말로 게시글을 삭제하시겠습니까?</p>
       <div class="modal_buttons">
@@ -65,7 +63,7 @@
         <button id="cancelDelete">취소</button>
       </div>
     </div>
-  </div>
+  </div> -->
   <div id="footer"></div>
 
 </body>
