250810 09:08 강버들 관리자 페이지 모달창 완료

--- a/webapp/app/modal/modalDeleteNews.html
+++ b/webapp/app/modal/modalDeleteNews.html
@@ -5,16 +5,16 @@
         <img onclick="turnOffModal()" class="modal_x" src="/team04-RB_frontend/webapp/assets/img/main/xIcon.png">
       </div>
       <p id="modal_text">
-        이 회원을 삭제하시겠습니까?
+        이 뉴스를 삭제하시겠습니까?
       </p>
       <div class="modal_button_box">
         <button onclick="modalCheck()" class="modal_check_button">
-          버튼 1
+          확인
         </button>
         <button onclick="modalCancel()" class="modal_cancel_button">
-          버튼 2
+          취소
         </button>
       </div>
     </div>
   </div>
-</div>
+</div> 
