--- a/webapp/app/restaurant/resModalTest.html
+++ b/webapp/app/restaurant/resModalTest.html
@@ -9,9 +9,10 @@
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
   <script defer src="./../../assets/js/restaurant/restaurant.js"></script>
-  
-  <link rel="stylesheet" href="./../../assets/css/modal.css">
-  <script src="./../../assets/js/restaurant/restaurantModal.js"></script>
+
+  <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
+  <script src="./../../assets/js/modal/modalDeleteNewsFinished.js"></script>
+
 </head>
 <body>
   <div id="header"></div>
@@ -74,4 +75,4 @@
   <div id="footer"></div>
   <div id="modal"></div>
 </body>
-</html>
+</html> 
