--- a/webapp/app/restaurant/restaurantDetail.html
+++ b/webapp/app/restaurant/restaurantDetail.html
@@ -14,34 +14,34 @@
   <div id="header"></div>
   <main>
     <div class="main_body">
-      <p class="page_title">
+      <p id="page_title">
         식당 이름
       </p>
       <div class="context">
         <div class="detail_info_area">
           <div class="restaurant_img_box">
-            <img class="restaurant_img" src="./../../assets/img/restaurant/re1.jpg">
+            <img id="restaurant_img" src="./../../assets/img/restaurant/re1.jpg">
           </div>
           <div class="restaurant_info">
             <div class="short_info">
-              <h1>
+              <h1 id="short_name">
                 자담치킨
               </h1>
-              <p>
+              <p id="short_category">
                 · 한식
               </p>
-              <p>
+              <p id="short_call">
                 · 전화번호
               </p>
-              <p>
+              <p id="short_restroom">
                 · 장애인 화장실 여부 : O
               </p>
-              <p>
+              <p id="short_ramp">
                 · 경사로 유무 : O
               </p>
             </div>
             <div class="restaurant_introduction">
-              <p class="introduction">
+              <p id="introduction">
                 서초 방배 1동 자담치킨입니다.
 저희 자담치킨은 동물복지웰빙 치킨과 자담프리미엄 전용유로 튀긴
 건강한 치킨 입니다. 세스코에 가입한 식당으로 보다 더 깨끗한 매장관와
@@ -60,4 +60,4 @@
   </main>
   <div id="footer"></div>
 </body>
-</html>
+</html> 
