--- a/webapp/footer.html
+++ b/webapp/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer">
+<footer id="site-footer">
   <div class="footerDiv">
     <ul>
       <li>
@@ -26,4 +26,4 @@
       ⓒ RB
     </span>
   </div>
-</footer>
+</footer> 
