--- a/webapp/header.html
+++ b/webapp/header.html
@@ -1,7 +1,7 @@
-<header class="site_header">
+<header id="site_header">
   <div>
     <span>
-      <a href="/team04-RB_frontend/main.html">
+      <a href="/team04-RB_frontend/webapp/main.html">
         <img src="/team04-RB_frontend/webapp/assets/img/main/logoP.png">
       </a>
     </span>
@@ -60,4 +60,4 @@
       </li>
     </ul>
   </nav>
-</header>
+</header> 
