--- a/webapp/header_login.html
+++ b/webapp/header_login.html
@@ -1,4 +1,4 @@
-<header class="site_header_login">
+<header id="site_header_login">
   <div>
     <span>
       <a href="/team04-RB_frontend/webapp/main.html">
@@ -6,10 +6,10 @@
       </a>
     </span>
     <span>
-      <a href="/team04-RB_frontend/webapp/app/login/login.html">
+      <a href="/team04-RB_frontend/webapp/app/myPageNormal/normalPwCheck.html">
         마이페이지
       </a>
-      <a href="/team04-RB_frontend/webapp/app/sign/terms.html">
+      <a href="/team04-RB_frontend/webapp/main.html">
         로그아웃
       </a>
     </span>
@@ -60,4 +60,4 @@
       </li>
     </ul>
   </nav>
-</header>
+</header> 
