--- a/webapp/main.html
+++ b/webapp/main.html
@@ -62,7 +62,7 @@
           </div>
           <ul class="board_list">
             <li>
-              <a href="dummy.html">
+              <a href="/team04-RB_frontend/webapp/app/post/postDetail.html">
                 <span class="board_list_number">
                   1
                 </span>
@@ -78,7 +78,7 @@
               </a>
             </li>
             <li>
-              <a href="dummy.html">
+              <a href="/team04-RB_frontend/webapp/app/post/postDetail.html">
                 <span class="board_list_number">
                   1
                 </span>
@@ -94,7 +94,7 @@
               </a>
             </li>
             <li>
-              <a href="dummy.html">
+              <a href="/team04-RB_frontend/webapp/app/post/postDetail.html">
                 <span class="board_list_number">
                   1
                 </span>
@@ -110,7 +110,7 @@
               </a>
             </li>
             <li>
-              <a href="dummy.html">
+              <a href="/team04-RB_frontend/webapp/app/post/postDetail.html">
                 <span class="board_list_number">
                   1
                 </span>
@@ -135,7 +135,7 @@
         <div class="explore_care">
           <ul>
             <li>
-              <a href ="dummy.html" class="care_profile">
+              <a href ="/team04-RB_frontend/webapp/app/careMember/careMember.html" class="care_profile">
                 <!-- 사진이랑 소개 -->
                 <div class="profile_info">
                   <div class="profile_pic_box">
@@ -170,7 +170,7 @@
               </a>
             </li>
             <li>
-              <a href ="dummy.html" class="care_profile">
+              <a href ="/team04-RB_frontend/webapp/app/careMember/careMember.html" class="care_profile">
                 <!-- 사진이랑 소개 -->
                 <div class="profile_info">
                   <div class="profile_pic_box">
@@ -205,7 +205,7 @@
               </a>
             </li>
             <li>
-              <a href ="dummy.html" class="care_profile">
+              <a href ="/team04-RB_frontend/webapp/app/careMember/careMember.html" class="care_profile">
                 <!-- 사진이랑 소개 -->
                 <div class="profile_info">
                   <div class="profile_pic_box">
@@ -240,7 +240,7 @@
               </a>
             </li>
             <li>
-              <a href ="dummy.html" class="care_profile">
+              <a href ="/team04-RB_frontend/webapp/app/careMember/careMember.html" class="care_profile">
                 <!-- 사진이랑 소개 -->
                 <div class="profile_info">
                   <div class="profile_pic_box">
@@ -282,4 +282,4 @@
   <div id="footer"></div>
   <!-- 메인 -->
 </body>
-</html>
+</html> 
