250810 12:21 장성주 돌봄페이지 진행중

--- a/webapp/app/myPageCare/careMatching.html
+++ b/webapp/app/myPageCare/careMatching.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
   <link rel="stylesheet" href="./../../assets/css/myPageCare/careMatching.css">
+  <script defer src="./../../assets/js/myPageCare/careMatching.js"></script>
 </head>
 
 <body>
@@ -62,6 +63,9 @@
             <div class="matching_point">
               포인트 사용: 10,000
             </div>
+            <div class="check">
+              완료 / 취소 / 진행중
+            </div>
           </li>
         </ul>
       </div>
@@ -90,7 +94,7 @@
       <h2> 매칭 추가 </h2>
       <form action="" method="get">
         <label for=""> 대상자: <input type="text"></label><br>
-        <label for=""> 날짜: <input type="text"></label><br>
+        <label for=""> 날짜: <input type="date"></label><br>
         <label for=""> 시간: <input type="text"></label><br>
         <label for=""> 지급 P: <input type="text"></label><br>
         <div class="modal_button">
