--- a/webapp/app/myPageCare/careMessage.html
+++ b/webapp/app/myPageCare/careMessage.html
@@ -104,14 +104,14 @@
   </div>
 </div> -->
 
-  <!-- <div class="modal_bg" id="sendSuccessModal">
+  <div class="modal_bg" id="sendSuccessModal">
     <div class="modal_box modal_send">
       <p class="send_message">쪽지를 보냈습니다.</p>
       <div class="modal_button">
         <button class="btn_confirm" onclick="closeSendModal()">확인</button>
       </div>
     </div>
-  </div> -->
+  </div>
 
 <!-- <div class="modal_bg" id="deleteMsgModal">
   <div class="modal_box confirm_modal">
