--- a/webapp/app/myPageCare/carePostDP.html
+++ b/webapp/app/myPageCare/carePostDP.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
   <link rel="stylesheet" href="./../../assets/css/myPageCare/carePostDP.css">
+  <script defer src="./../../assets/js/myPageCare/carePostDP.js"></script>
 </head>
 
 <body>
@@ -54,8 +55,7 @@
       </section>
     </section>
   </main>
-
-  <!-- <div class="modal" id="deleteModal">
+  <div class="modal" id="deleteModal">
     <div class="modal_box">
       <p>정말로 게시글을 삭제하시겠습니까?</p>
       <div class="modal_buttons">
@@ -63,7 +63,8 @@
         <button id="cancelDelete">취소</button>
       </div>
     </div>
-  </div> -->
+  </div>
+
   <div id="footer"></div>
 
 </body>
