--- a/webapp/app/myPageCare/careModify.html
+++ b/webapp/app/myPageCare/careModify.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Care_Modify</title>
+  <link rel="stylesheet" href="./../../assets/css/myPageCare/careModify.css">
   <link rel="stylesheet" href="./../../assets/css/header.css">
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
-  <link rel="stylesheet" href="./../../assets/css/myPageCare/careModify.css">
+  <script defer src="./../../assets/js/myPageCare/careModify.js"></script>
 </head>
 </head>
-
 <body>
   <div id="header"></div>
-  <header>
-
-  </header>
   <main>
     <nav class="main_sidebar">
+      <img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#">
       <ul>
-        <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a></li>
-        <li><a href="./careModify.html">개인정보 수정</a></li>
-        <li><a href="./careMark.html">찜한 목록</a></li>
-        <li><a href="./careMatching.html">매칭 기록</a></li>
-        <li><a href="./careMessage.html">쪽지함</a></li>
-        <li><a href="./carePost.html">게시글 관리</a></li>
-        <li><a href="./carePointreturn.html">포인트 환급</a></li>
-        <li><a href="./careReference.html">1 대 1 문의</a></li>
-        <li><a href="./careExit.html">회원 탈퇴</a></li>
+        <a href="./careModify.html"><li>개인정보 수정</li></a>
+        <a href="./careMark.html"><li>찜한 목록</li></a>
+        <a href="./careMatching.html"><li>매칭 기록</li></a>
+        <a href="./careMessage.html"><li>쪽지함</li></a>
+        <a href="./carePost.html"><li>게시글 관리</li></a>
+        <a href="./carePointList.html"><li>포인트 환급</li></a>
+        <a href="./careReference.html"><li>1 대 1 문의</li></a>
+        <a href="./careExit.html"><li>회원 탈퇴</li></a>
       </ul>
     </nav>
 
@@ -47,70 +43,68 @@
         </nav>
       </div>
       <form action="" method="get">
-        <div>
+        <div> 
           <div>회원 정보</div>
         </div>
-        <div class="caremodify">
-          <div class="name_date">
-            <div>
-              <div>성명</div>
-              <div>이름</div>
-            </div>
-            <div>
-              <div>가입날짜</div>
-              <div>2025-08-02</div>
-            </div>
-          </div>
-          <div>
-            <div>주소</div>
-            <nav>
+        <nav class="caremodify">
+          <ul>
+            <li class="member">
               <ul>
-                <li><input type="text" placeholder="12345"></li>
-                <li>
-                  <input type="text" placeholder="서울 특별시">
-                  <button>우편번호 찾기</button>
-                </li>
-                <li>
-                  <input type="text" placeholder="123동 123호">
-                  <button>확인</button>
+                <li class="info">성명</li>
+                <li class="myinfo">이름</li>
+              </ul>
+            </li>
+            <li class="member">
+              <ul>
+                <li class="info">주소</li>
+                <li class="myinfo">
+                  <ul>
+                    <li><input type="text" placeholder="우편번호"></li>
+                    <li><input type="text" placeholder="주소"><button>우편번호 찾기</button></li>
+                    <li><input type="text" placeholder="상세주소"><button>확인</button></li>
+                  </ul>
                 </li>
               </ul>
-            </nav>
-          </div>
-          <div>
-            <div>전화번호</div>
-            <div>010-1234-5678</div>
-            <button>수정</button>
-          </div>
-          <div>
-            <div>아이디</div>
-            <div>qwer</div>
-          </div>
-          <div>
-            <div>이메일</div>
-            <input type="text" placeholder="fdsfs@naver.com">
-            <button>수정</button>
-          </div>
-          <div>
-            <div>비밀번호</div>
-            <nav>
+            </li>
+            <li class="member">
               <ul>
-                <li>
-                  <input type="password" placeholder="비밀번호를 입력하여 주십시오">
-                </li>
-                <li>
-                  <input type="password" placeholder="새 비밀번호를 다시 입력하여 주십시오">
-                  <button>확인</button>
-                </li>
+                <li class="info">전화번호</li>
+                <li class="myinfo"><div>010-1234-5678</div><button>수정</button></li>
               </ul>
-            </nav>
-          </div>
-        </div>
+            </li>
+            <li class="member">
+              <ul>
+                <li class="info">아이디</li>
+                <li class="myinfo">아이디</li>
+              </ul>
+            </li>
+            <li class="member">
+              <ul>
+                <li class="info">이메일</li>
+                <li class="myinfo"><input type="email" placeholder="이메일"><button>수정</button></li>
+              </ul>
+            </li>
+            <li class="member">
+              <ul>
+                <li class="info">비밀번호</li>
+                <li class="myinfo">
+                  <ul>
+                    <li><input type="password" placeholder="비밀번호 입력"></li>
+                    <li><input type="password" placeholder="새 비밀번호 입력"><button>확인</button></li></li>
+                  </ul>
+              </ul>
+            </li>
+          </ul>
+        </nav>
       </form>
     </div>
   </main>
+  <div id="saveSuccessModal" class="modal">
+    <div class="modal-content">
+      <p>정보가 저장되었습니다.</p>
+      <button id="saveConfirmBtn">확인</button>
+    </div>
+  </div>
   <div id="footer"></div>
-
 </body>
-
 </html>
